# musubi

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  test.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/utils/: error.rs  filesystem.rs  http.rs  structs.rs
src/components/: Greet.vue  Home.vue  Navbar.vue  Spinner.vue  Table.vue
src/components/authenticate/: Authenticate.vue  Login.vue  Register.vue
src/components/network/: Receive.vue  Send.vue
src/components/utils/: Dataview.vue  Dialog.vue  Item.vue
src/config/: configureHTTPInterceptor.ts
src/enums/: filter.ts
src/interfaces/: code.ts  item.ts
src/locales/: en.json  fr-FR.json  fr.json
src/resources/json/: table.json
src/router/: index.ts
src/services/: authService.ts  dialogService.ts  itemService.ts
src/services/dialog/: dialogService.ts
src/store/: item.ts  main.ts  user.ts
src/styles/: bootstrap.scss  themes.scss
src/utils/: i18n.js  i18n.ts
