[package]
name = "musubi"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
anyhow = "1.0"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false}
dirs = "4.0.0"
flate2 = "1.0"
image = "0.24.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
tauri = { version = "1.2.0", features = ["dialog-message", "dialog-open", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "path-all", "protocol-asset"] }
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.21.2", features= ["fs"] }
tokio-util = { version = "0.7.4", features= ["codec"] }
reqwest = {version = "0.11.12", features = ["blocking", "multipart", "json", "stream"] }
ureq = { version = "2.5.0", features = ["json", "charset", "gzip"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
